test/runtime/fail/if/missing_open.hy

// expect error: Expected `{`

let a = 3
if a == 3
	a = 4
}
